fix cohort generation